--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Just Tech News</title>
+  <title>Tech Blog</title>
   <link rel="stylesheet" href="/stylesheets/style.css">
 </head>
 
@@ -12,29 +12,30 @@
   <div class="wrapper">
     <header>
       <h1>
-        <a href="/">Just Tech News</a>
+        <a href="/">Tech Blog</a>
       </h1>
-      <nav>
+      {{!-- <nav>
         {{#if loggedIn}}
         <a href="/dashboard">dashboard</a>
         <button id="logout" class="btn-no-style">logout</button>
         {{else}}
         <a href="/login">login</a>
         {{/if}}
-      </nav>
+      </nav> --}}
     </header>
     <main>
+      {{!-- data will be plugged in later --}}
       {{{ body }}}
     </main>
     <footer>
-      Thanks for visiting!
+      Come back soon!
     </footer>
   </div>
 
-  {{#if loggedIn}}
+  {{!-- {{#if loggedIn}}
   <script src="/javascript/logout.js"></script>
   {{/if}}
-  
+   --}}
 </body>
 
 </html>
