--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -14,14 +14,10 @@
       <h1>
         <a href="/">Tech Blog</a>
       </h1>
-      {{!-- <nav>
-        {{#if loggedIn}}
-        <a href="/dashboard">dashboard</a>
+      <nav>
         <button id="logout" class="btn-no-style">logout</button>
-        {{else}}
         <a href="/login">login</a>
-        {{/if}}
-      </nav> --}}
+      </nav>
     </header>
     <main>
       {{!-- data will be plugged in later --}}
@@ -32,10 +28,10 @@
     </footer>
   </div>
 
-  {{!-- {{#if loggedIn}}
+  {{!-- {{#if loggedIn}} --}}
   <script src="/javascript/logout.js"></script>
-  {{/if}}
-   --}}
+  {{!-- {{/if}} --}}
+  
 </body>
 
 </html>
