--- a/views/single-post.handlebars
+++ b/views/single-post.handlebars
@@ -11,6 +11,7 @@
   </div>
 </article>
 
+{{#if loggedIn}}
 <form class="comment-form">
   <div>
     <textarea name="comment-body"></textarea>
@@ -21,6 +22,7 @@
     <button type="button" class="upvote-btn">upvote</button>
   </div>
 </form>
+{{/if}}
 
 <div class="comments">
   {{#each post.comments}}
@@ -34,3 +36,7 @@
   </section>
   {{/each}}
 </div>
+
+{{#if loggedIn}}
+<script src="/javascript/comment.js"></script>
+{{/if}}
