--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -12,7 +12,8 @@
   
   a {
     text-decoration: none;
-    color: #225ca3;
+    /* color: #225ca3; */
+    color: black;
     font-weight: bold;
     transition: color .1s;
   }
@@ -22,19 +23,19 @@
   }
   
   button {
-    background-color: #225ca3;
+    /* background-color: #225ca3; */
     border: 0;
     padding: 1%;
-    color: white;
+    /* color: white; */
     font-weight: bold;
     transition: background-color .1s;
     cursor: pointer;
     border-radius: 5px;
   }
   
-  button:hover {
+  /* button:hover {
     background-color: #3486eb;
-  }
+  } */
   
   .post-list {
     margin: 0;
