--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,18 +1,19 @@
-<ol class="post-list">
+<article class=""post">
+{{!-- <ol class="post-list"> --}}
   {{#each posts }}
   <li>
     <article class="post">
-      <div class="title">
+      <div class="comment">
         <a href="{{post_url}}" target="_blank">{{title}}</a>
         <span>({{post_url}})</span>
       </div>
       <div class="meta">
-        {{vote_count}} point(s) by {{user.username}} on
-        {{created_at}}
+        {{!-- {{vote_count}} point(s) by {{user.username}} on
+        {{created_at}} --}}
         |
         <a href="/post/{{id}}">{{comments.length}} comment(s)</a>
       </div>
     </article>
   </li>
   {{/each}}
-</ol>
+</article>
