--- a/views/partials/comments.handlebars
+++ b/views/partials/comments.handlebars
@@ -1,12 +1,15 @@
 <div class="comments">
   {{#each this}}
-  <section class="comment">
-    <div class="meta">
-      {{user.username}} on {{format_date created_at}}
-    </div>
-    <div class="text">
-      {{comment_text}}
-    </div>
-  </section>
+  <div class="card">
+    <h3 class="card-header"></h3>
+    <section class="comment card-body">
+        <div class="meta">
+          {{user.username}} on {{format_date created_at}}
+        </div>
+        <div class="text">
+          {{comment_text}}
+        </div>
+    </section>
+  </div>    
   {{/each}}
 </div>
