--- a/views/partials/new-comments.handlebars
+++ b/views/partials/new-comments.handlebars
@@ -1,5 +1,5 @@
-<form class="comment-form">
-    <div>
+<form class="card">
+    <div class="card-header">
         <textarea name="comment-body"></textarea>
     </div>
 
