final edit except new comment

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,5 +1,5 @@
 :root {
-  --primary: #ccdad1;
+  --primary: #dbe7e1;
   --secondary: #dce9d5;
   --tertiary: #788585;
   --light-dark: #a1a0a1;
@@ -15,10 +15,9 @@ body {
   background-color: var(--primary);
   margin: 0;
   padding: 0;
-  font-family: "IBM Plex Sans", sans-serif;
+  font-family: sans-serif;
   color: var(--dark);
   line-height: 1.5;
-  font-size: 24px;
 }
 
 h1,
@@ -46,6 +45,7 @@ main {
 .wrapper {
   width: 100%;
   min-height: 100%;
+  max-width: 1200px;
   margin: 0 auto;
   display: flex;
   flex-direction: column;
@@ -55,27 +55,26 @@ p {
   font-size: 1.2rem;
 }
 
-.btn {
-  font-size: 1.3rem;
-  text-decoration: none;
-  padding: 6px 5px;
-  width: 100%;
-  display: block;
+button {
+  border: 0;
+  color: white;
+  cursor: pointer;
+  border-radius: 5px;
+  font-weight: bold;
+  padding: 1%;
   margin: 5px 0;
   border-radius: var(--border-radius);
   color: white;
-  border: none;
-  outline: none;
   background-color: var(--light-dark);
   transform: translate(-1px, -1px);
-}
+} 
 
-.btn:hover {
+button:hover {
   color: var(--primary);
   background-color: var(--tertiary);
   transform: translate(0, 0);
   box-shadow: 2px 2px var(--dark);
-}
+} 
 
 .btn-inline {
   display: inline;
@@ -105,7 +104,7 @@ p {
 }
 
 .hero {
-  padding: 3% 4%;
+  padding: 2% 3%;
   background-color: var(--dark);
   color: var(--primary);
 }
@@ -115,13 +114,13 @@ p {
 }
 
 .title {
-  font-size: 3rem;
+  font-size: 2rem;
   background-color: var(--primary);
   color: var(--dark);
   padding: 0 10px;
   display: inline-block;
   border-radius: var(--border-radius);
-  box-shadow: 6px 5px var(--light-dark);
+  box-shadow: 4px 3px var(--light-dark);
 }
 
 .list-group {
@@ -279,214 +278,100 @@ footer {
   align-items: center;
 }
 
-.col-auto {
-  flex-grow: 1;
+.post-list {
+  margin: 0;
+  padding: 0;
 }
 
-.col-1 {
-  flex: 0 0 calc(100% * 1 / 12 - 2%);
+textarea, input {
+  padding: .5%;
+  border-radius: 5px;
+  border: 1px solid #ccc;
 }
 
-.col-2 {
-  flex: 0 0 calc(100% * 2 / 12 - 2%);
+textarea:focus, input:focus {
+  outline: none;
+  border: 1px solid #3486eb;
 }
 
-.col-3 {
-  flex: 0 0 calc(100% * 3 / 12 - 2%);
+textarea {
+  min-width: 40%;
+  min-height: 100px;
 }
 
-.col-4 {
-  flex: 0 0 calc(100% * 4 / 12 - 2%);
+form > div {
+  margin-bottom: 2%;
 }
 
-.col-5 {
-  flex: 0 0 calc(100% * 5 / 12 - 2%);
+form label {
+  display: block;
 }
 
-.col-6 {
-  flex: 0 0 calc(100% * 6 / 12 - 2%);
+.btn-no-style {
+  background: none;
+  border: none;
+  padding: 0;
+  cursor: pointer;
+  text-decoration: none;
+  color: #225ca3;
+  font-size: 100%;
+  font-weight: bold;
+  transition: color .1s;
+  margin-left: 16px;
 }
 
-.col-7 {
-  flex: 0 0 calc(100% * 7 / 12 - 2%);
+.btn-no-style:hover {
+  background: none;
+  color: #3486eb;
 }
 
-.col-8 {
-  flex: 0 0 calc(100% * 8 / 12 - 2%);
+.delete-post-btn {
+  background-color: #d41414;
 }
 
-.col-9 {
-  flex: 0 0 calc(100% * 9 / 12 - 2%);
+.delete-post-btn:hover {
+  background-color: #ff643d;
 }
 
-.col-10 {
-  flex: 0 0 calc(100% * 10 / 12 - 2%);
+.post {
+  margin-bottom: 2%;
+  line-height: 150%;
 }
 
-.col-11 {
-  flex: 0 0 calc(100% * 11 / 12 - 2%);
+.post .title span {
+  font-style: italic;
+  font-size: 90%;
+  color: #7d7d7d;
 }
 
-.col-12 {
-  flex: 0 0 100%;
+.edit-link {
+  display: block;
+  margin: -1.5% 0 2% 0;
 }
-/* col-sm */
 
-@media screen and (min-width: 640px) {
-  .col-sm-1 {
-      flex: 0 0 calc(100% * 1 / 12 - 2%);
-  }
-  .col-sm-2 {
-      flex: 0 0 calc(100% * 2 / 12 - 2%);
-  }
-  .col-sm-3 {
-      flex: 0 0 calc(100% * 3 / 12 - 2%);
-  }
-  .col-sm-4 {
-      flex: 0 0 calc(100% * 4 / 12 - 2%);
-  }
-  .col-sm-5 {
-      flex: 0 0 calc(100% * 5 / 12 - 2%);
-  }
-  .col-sm-6 {
-      flex: 0 0 calc(100% * 6 / 12 - 2%);
-  }
-  .col-sm-7 {
-      flex: 0 0 calc(100% * 7 / 12 - 2%);
-  }
-  .col-sm-8 {
-      flex: 0 0 calc(100% * 8 / 12 - 2%);
-  }
-  .col-sm-9 {
-      flex: 0 0 calc(100% * 9 / 12 - 2%);
-  }
-  .col-sm-10 {
-      flex: 0 0 calc(100% * 10 / 12 - 2%);
-  }
-  .col-sm-11 {
-      flex: 0 0 calc(100% * 11 / 12 - 2%);
-  }
-  .col-sm-12 {
-      flex: 0 0 100%;
-  }
+.comment-form {
+  margin-bottom: 5%;
 }
-/* col-md */
 
-@media screen and (min-width: 768px) {
-  .col-md-1 {
-      flex: 0 0 calc(100% * 1 / 12 - 2%);
-  }
-  .col-md-2 {
-      flex: 0 0 calc(100% * 2 / 12 - 2%);
-  }
-  .col-md-3 {
-      flex: 0 0 calc(100% * 3 / 12 - 2%);
-  }
-  .col-md-4 {
-      flex: 0 0 calc(100% * 4 / 12 - 2%);
-  }
-  .col-md-5 {
-      flex: 0 0 calc(100% * 5 / 12 - 2%);
-  }
-  .col-md-6 {
-      flex: 0 0 calc(100% * 6 / 12 - 2%);
-  }
-  .col-md-7 {
-      flex: 0 0 calc(100% * 7 / 12 - 2%);
-  }
-  .col-md-8 {
-      flex: 0 0 calc(100% * 8 / 12 - 2%);
-  }
-  .col-md-9 {
-      flex: 0 0 calc(100% * 9 / 12 - 2%);
-  }
-  .col-md-10 {
-      flex: 0 0 calc(100% * 10 / 12 - 2%);
-  }
-  .col-md-11 {
-      flex: 0 0 calc(100% * 11 / 12 - 2%);
-  }
-  .col-md-12 {
-      flex: 0 0 100%;
-  }
+.comment {
+  padding: 1%;
+  margin-bottom: 1%;
 }
-/* col-lg */
 
-@media screen and (min-width: 992px) {
-  .col-lg-1 {
-      flex: 0 0 calc(100% * 1 / 12 - 2%);
-  }
-  .col-lg-2 {
-      flex: 0 0 calc(100% * 2 / 12 - 2%);
-  }
-  .col-lg-3 {
-      flex: 0 0 calc(100% * 3 / 12 - 2%);
-  }
-  .col-lg-4 {
-      flex: 0 0 calc(100% * 4 / 12 - 2%);
-  }
-  .col-lg-5 {
-      flex: 0 0 calc(100% * 5 / 12 - 2%);
-  }
-  .col-lg-6 {
-      flex: 0 0 calc(100% * 6 / 12 - 2%);
-  }
-  .col-lg-7 {
-      flex: 0 0 calc(100% * 7 / 12 - 2%);
-  }
-  .col-lg-8 {
-      flex: 0 0 calc(100% * 8 / 12 - 2%);
-  }
-  .col-lg-9 {
-      flex: 0 0 calc(100% * 9 / 12 - 2%);
-  }
-  .col-lg-10 {
-      flex: 0 0 calc(100% * 10 / 12 - 2%);
-  }
-  .col-lg-11 {
-      flex: 0 0 calc(100% * 11 / 12 - 2%);
-  }
-  .col-lg-12 {
-      flex: 0 0 100%;
-  }
+.comment:nth-child(odd) {
+  background-color: #fff5eb;
 }
-/* col-xl */
 
-@media screen and (min-width: 1200px) {
-  .col-xl-1 {
-      flex: 0 0 calc(100% * 1 / 12 - 2%);
-  }
-  .col-xl-2 {
-      flex: 0 0 calc(100% * 2 / 12 - 2%);
-  }
-  .col-xl-3 {
-      flex: 0 0 calc(100% * 3 / 12 - 2%);
-  }
-  .col-xl-4 {
-      flex: 0 0 calc(100% * 4 / 12 - 2%);
-  }
-  .col-xl-5 {
-      flex: 0 0 calc(100% * 5 / 12 - 2%);
-  }
-  .col-xl-6 {
-      flex: 0 0 calc(100% * 6 / 12 - 2%);
-  }
-  .col-xl-7 {
-      flex: 0 0 calc(100% * 7 / 12 - 2%);
-  }
-  .col-xl-8 {
-      flex: 0 0 calc(100% * 8 / 12 - 2%);
-  }
-  .col-xl-9 {
-      flex: 0 0 calc(100% * 9 / 12 - 2%);
-  }
-  .col-xl-10 {
-      flex: 0 0 calc(100% * 10 / 12 - 2%);
-  }
-  .col-xl-11 {
-      flex: 0 0 calc(100% * 11 / 12 - 2%);
-  }
-  .col-xl-12 {
-      flex: 0 0 100%;
-  }
+.comment .meta {
+  font-size: 90%;
+  margin-bottom: .5%;
+  opacity: .6;
+}
+
+.new-post-form input {
+  width: 300px;
+}
+
+.edit-post-form {
+  margin-bottom: 5%;
 }
