--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,19 +1,7 @@
-<article class=""post">
-{{!-- <ol class="post-list"> --}}
-  {{#each posts }}
-  <li>
-    <article class="post">
-      <div class="comment">
-        <a href="{{post_url}}" target="_blank">{{title}}</a>
-        <span>({{post_url}})</span>
-      </div>
-      <div class="meta">
-        {{!-- {{vote_count}} point(s) by {{user.username}} on
-        {{created_at}} --}}
-        |
-        <a href="/post/{{id}}">{{comments.length}} comment(s)</a>
-      </div>
-    </article>
-  </li>
+<article class="post">
+  {{#each posts as |post|}}
+  
+    {{> post-info post }}
+  
   {{/each}}
 </article>
