--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -4,35 +4,32 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>a Tech Blog for Developers</title>
+  <title>a Tech Blog for DevOps</title>
   <link rel="stylesheet" href="/stylesheets/style.css">
 </head>
-
-<body>
+  <body>
   <div class="wrapper">
     <header class="hero">
       <div>
-        <nav class="nav">     
-          <a class="link" href="/">Homepage</a>
+        <nav class="nav">
+            <a class="link" href="/">Homepage</a>
     
           {{#if loggedIn}}
-          <a class="link" href="/dashboard">Dashboard</a>
-        
-          <button id="logout" class="btn-no-style">Logout</button>
-        
+            <a class="link" href="/dashboard">Dashboard</a>
+            <button id="logout" class=" button btn-no-style">Logout</button>
           {{else}}
-          <a class="link" href="/login">Login</a>
+            <a class="link"  href="/login">Login</a>
           {{/if}}
         </nav>
       </div>
-
-      <h1 class="title">a Tech Blog for Developers</h1>
+      <h1 class="title">a Tech Blog for DevOps</h1>
     </header>
+
     <main>
       {{{ body }}}
     </main>
     <footer>
-      Thanks for visiting... come back soon!
+      Thanks for visiting... Come again soon!
     </footer>
   </div>
 
