--- a/views/partials/post-info.handlebars
+++ b/views/partials/post-info.handlebars
@@ -6,6 +6,7 @@
     <span>({{format_url post_url}})</span>
   </div>
   <div class="meta">
+    by {{user.username}} on {{format_date created_at}}
     {{!-- {{vote_count}} {{format_plural "point" vote_count}} by {{user.username}} on {{format_date created_at}} --}}
     |
     <a href="/post/{{id}}">{{comments.length}} {{format_plural "comment" comments.length}}</a>
